Fix accessibility errors

--- a/frontend/groupomania/src/components/EditProfile/EditProfile.css
+++ b/frontend/groupomania/src/components/EditProfile/EditProfile.css
@@ -18,7 +18,7 @@
 }
 
 .cta-submit-profile {
-    background-color: #FE421A !important;
+    background-color: #EA1C04 !important;
     color: #fff;
     margin-top: 20px;
 }
