--- a/frontend/groupomania/src/components/Login/Login.css
+++ b/frontend/groupomania/src/components/Login/Login.css
@@ -5,7 +5,7 @@
 }
 
 .container a {
-    color: #FE421A;
+    color: #EA1C04;
     text-decoration: none;
 }
 
@@ -23,7 +23,7 @@
 }
 
 .login {
-    background-color: #FE421A !important;
+    background-color: #EA1C04 !important;
     color: #fff;
     font-size: 20px;
     margin-bottom: 20px;
