--- a/frontend/groupomania/src/components/Register/Register.css
+++ b/frontend/groupomania/src/components/Register/Register.css
@@ -14,7 +14,7 @@
 }
 
 .register {
-    background-color: #FE421A !important;
+    background-color: #EA1C04 !important;
     color: #fff;
     font-size: 20px;
     margin-bottom: 20px;
@@ -26,5 +26,5 @@
 }
 
 .login {
-    color: #FE421A;
+    color: #EA1C04;
 }
