--- a/frontend/groupomania/src/components/UserSettings/UserSettings.css
+++ b/frontend/groupomania/src/components/UserSettings/UserSettings.css
@@ -21,7 +21,7 @@
 }
 
 .cta-delete-profile {
-    background-color: #FE421A !important;
+    background-color: #EA1C04 !important;
     color: #fff;
     margin-top: 20px;
 }
