--- a/frontend/groupomania/src/components/DeleteProfile/DeleteProfile.css
+++ b/frontend/groupomania/src/components/DeleteProfile/DeleteProfile.css
@@ -4,7 +4,7 @@
 }
 
 .cta-delete-profile {
-    background-color: #FE421A !important;
+    background-color: #EA1C04 !important;
     color: #fff;
     margin-top: 30px;
 }
