Finalize forgotPassword feature

--- a/frontend/groupomania/src/components/RecoverPassword/RecoverPassword.css
+++ b/frontend/groupomania/src/components/RecoverPassword/RecoverPassword.css
@@ -4,26 +4,31 @@
     text-align: center;
 }
 
-.feature-dev, .forgot-text {
-        font-weight: 500;
-}
-
 .feature-dev {
-    font-size: 25px;
-    margin-bottom: 20px;
-}
-
-.forgot-text {
-    font-size: 18px;
+        font-weight: 500;
+        font-size: 25px;
+        margin-bottom: 20px;
 }
 
 .v-form {
     margin-top: 50px;
 }
 
-.v-btn {
-    background-color: #FE421A !important;
+.v-form .password {
+    flex-wrap: nowrap !important;
+}
+
+.eye {
+    margin-top: 16px !important;
+    margin-left: 10px !important;
+}
+
+.cta-confirm {
+    background-color: #EA1C04 !important;
     color: #fff;
+}
+
+.v-btn {
     font-size: 20px;
-    margin-top: 200px;
+    margin-top: 20px;
 }
